# Call-of-duty-Black-ops-uwb

./: CMakeLists.txt  KisakBlack.sln  KisakBlack.vcxproj  KisakBlack.vcxproj.filters  cmake_files.cmake  cmake_files_sp.cmake
DemonWare/bdCore/: bdSingleton.h
src/DW/: MatchMakingInfo_win32.cpp  MatchMakingInfo_win32.h  MatchMakingInfo_win32.txt  MatchMakingQueries_win32.cpp  MatchMakingQueries_win32.h  MatchMakingQueries_win32.txt  MatchRecorder.cpp  MatchRecorder.h  MatchRecorder.txt  dwLogOn_pc.cpp  dwLogOn_pc.h  dwLogOn_pc.txt  dwMatchMaking.cpp  dwMatchMaking.h  dwMatchMaking.txt  dwMessaging.cpp  dwMessaging.h  dwMessaging.txt  dwNet.cpp  dwNet.h  dwNet.txt  dwQoS.cpp  dwQoS.h  dwQoS.txt  dwRecordEvent.cpp  dwRecordEvent.h  dwRecordEvent.txt  dwStats.cpp  dwStats.h  dwStats.txt  dwStorage.cpp  dwStorage.h  dwStorage.txt  dwTasks.cpp  dwTasks.h  dwTasks.txt  dwUtils.cpp  dwUtils.h  dwUtils.txt  dwUtils_pc.cpp  (+2 more)
src/DynEntity/: DynEntity_client.cpp  DynEntity_client.h  DynEntity_client.txt  DynEntity_coll.cpp  DynEntity_coll.h  DynEntity_coll.txt  DynEntity_gamestate.cpp  DynEntity_gamestate.h  DynEntity_gamestate.txt  DynEntity_load_obj.cpp  DynEntity_load_obj.h  DynEntity_load_obj.txt  DynEntity_pieces.cpp  DynEntity_pieces.h  DynEntity_pieces.txt  DynEntity_server.cpp  DynEntity_server.h  DynEntity_server.txt
src/EffectsCore/: FxCurve.cpp  FxCurve.h  FxCurve.txt  FxCurve_load_obj.cpp  FxCurve_load_obj.h  FxCurve_load_obj.txt  fx_archive.cpp  fx_archive.h  fx_archive.txt  fx_beam.cpp  fx_beam.h  fx_beam.txt  fx_convert.cpp  fx_convert.h  fx_convert.txt  fx_draw.cpp  fx_draw.h  fx_draw.txt  fx_dvars.cpp  fx_dvars.h  fx_dvars.txt  fx_graph.cpp  fx_graph.h  fx_graph.txt  fx_load_obj.cpp  fx_load_obj.h  fx_load_obj.txt  fx_marks.cpp  fx_marks.h  fx_marks.txt  fx_postlight.cpp  fx_postlight.h  fx_postlight.txt  fx_profile.cpp  fx_profile.h  fx_profile.txt  fx_random.cpp  fx_random.h  fx_random.txt  fx_sort.cpp  (+20 more)
src/aim_assist/: aim_assist.cpp  aim_assist.h  aim_assist.txt  aim_target.cpp  aim_target.h  aim_target.txt
src/bgame/: bg_actor_prone.cpp  bg_actor_prone.h  bg_actor_prone.txt  bg_animation.cpp  bg_animation.h  bg_animation.txt  bg_animconditions.cpp  bg_animconditions.h  bg_animconditions.txt  bg_collectibles_sp.cpp  bg_collectibles_sp.h  bg_dog.cpp  bg_dog.h  bg_dog.txt  bg_dog_animations_mp.cpp  bg_dog_animations_mp.h  bg_dog_animations_mp.txt  bg_dog_animations_sp.cpp  bg_dog_animations_sp.h  bg_dog_animations_wrapper.h  bg_dtp.cpp  bg_dtp.h  bg_dtp.txt  bg_emblems.cpp  bg_emblems.h  bg_emblems.txt  bg_fire.cpp  bg_fire.h  bg_fire.txt  bg_jump.cpp  bg_jump.h  bg_jump.txt  bg_local.h  bg_mantle.cpp  bg_mantle.h  bg_mantle.txt  bg_misc.cpp  bg_misc.h  bg_misc.txt  bg_misctables.cpp  (+49 more)
src/cgame/: cg_ammocounter.cpp  cg_ammocounter.h  cg_ammocounter.txt  cg_bolt.cpp  cg_bolt.h  cg_bolt.txt  cg_camera.cpp  cg_camera.h  cg_camera.txt  cg_camerashake.cpp  cg_camerashake.h  cg_camerashake.txt  cg_clouds.cpp  cg_clouds.h  cg_clouds.txt  cg_colltree.cpp  cg_colltree.h  cg_colltree.txt  cg_compass.cpp  cg_compass.h  cg_compass.txt  cg_draw_debug.cpp  cg_draw_debug.h  cg_draw_debug.txt  cg_draw_indicators.cpp  cg_draw_indicators.h  cg_draw_indicators.txt  cg_draw_names.cpp  cg_draw_names.h  cg_draw_names.txt  cg_draw_reticles.cpp  cg_draw_reticles.h  cg_draw_reticles.txt  cg_drawtools.cpp  cg_drawtools.h  cg_drawtools.txt  cg_effects_load_obj.cpp  cg_effects_load_obj.h  cg_effects_load_obj.txt  cg_event.cpp  (+66 more)
src/cgame_mp/: cg_actors_mp.cpp  cg_actors_mp.h  cg_actors_mp.txt  cg_animscripted_mp.cpp  cg_animscripted_mp.h  cg_animscripted_mp.txt  cg_animtree_mp.cpp  cg_animtree_mp.h  cg_animtree_mp.txt  cg_compassfriendlies_mp.cpp  cg_compassfriendlies_mp.h  cg_compassfriendlies_mp.txt  cg_consolecmds_mp.cpp  cg_consolecmds_mp.h  cg_consolecmds_mp.txt  cg_draw_mp.cpp  cg_draw_mp.h  cg_draw_mp.txt  cg_draw_net_mp.cpp  cg_draw_net_mp.h  cg_draw_net_mp.txt  cg_ents_mp.cpp  cg_ents_mp.h  cg_ents_mp.txt  cg_local_mp.h  cg_main_mp.cpp  cg_main_mp.h  cg_main_mp.txt  cg_newDraw_mp.cpp  cg_newDraw_mp.h  cg_newDraw_mp.txt  cg_players_mp.cpp  cg_players_mp.h  cg_players_mp.txt  cg_pose_mp.cpp  cg_pose_mp.h  cg_pose_mp.txt  cg_predict_mp.cpp  cg_predict_mp.h  cg_predict_mp.txt  (+22 more)
src/cgame_sp/: cg_actors_sp.cpp  cg_actors_sp.h  cg_animscripted_sp.cpp  cg_animscripted_sp.h  cg_animtree_sp.cpp  cg_animtree_sp.h  cg_compassfriendlies_sp.cpp  cg_compassfriendlies_sp.h  cg_consolecmds_sp.cpp  cg_draw_net_sp.cpp  cg_draw_net_sp.h  cg_draw_sp.cpp  cg_draw_sp.h  cg_ents_sp.cpp  cg_ents_sp.h  cg_local_sp.h  cg_main_sp.cpp  cg_main_sp.h  cg_modelpreviewer_sp.cpp  cg_modelpreviewer_sp.h  cg_newDraw_sp.cpp  cg_newDraw_sp.h  cg_players_sp.cpp  cg_players_sp.h  cg_pose_sp.cpp  cg_pose_sp.h  cg_predict_sp.cpp  cg_predict_sp.h  cg_scoreboard_sp.cpp  cg_scoreboard_sp.h  cg_scr_main_sp.cpp  cg_scr_main_sp.h  cg_servercmds_sp.cpp  cg_servercmds_sp.h  cg_snapshot_sp.cpp  cg_snapshot_sp.h  cg_ui_animate_sp.cpp  cg_ui_animate_sp.h  cg_vehicles_sp.cpp  cg_vehicles_sp.h  (+3 more)
src/client/: cl_cin.cpp  cl_cin.h  cl_cin.txt  cl_compositing.cpp  cl_compositing.h  cl_compositing.txt  cl_console.cpp  cl_console.h  cl_console.txt  cl_debugdata.cpp  cl_debugdata.h  cl_debugdata.txt  cl_devgui.cpp  cl_devgui.h  cl_devgui.txt  cl_gamepad.cpp  cl_gamepad.h  cl_gamepad.txt  cl_keys.cpp  cl_keys.h  cl_keys.txt  cl_main.cpp  cl_main.h  cl_main.txt  cl_medal.cpp  cl_medal.h  cl_medal.txt  cl_milestone.cpp  cl_milestone.h  cl_milestone.txt  cl_parse.cpp  cl_parse.h  cl_parse.txt  cl_rank.cpp  cl_rank.h  cl_rank.txt  cl_voice.cpp  cl_voice.h  cl_voice.txt  client.h  (+10 more)
src/client_mp/: cl_cgame_mp.cpp  cl_cgame_mp.h  cl_cgame_mp.txt  cl_input_mp.cpp  cl_input_mp.h  cl_input_mp.txt  cl_main_mp.cpp  cl_main_mp.h  cl_main_mp.txt  cl_main_pc_mp.cpp  cl_main_pc_mp.h  cl_main_pc_mp.txt  cl_net_chan_mp.cpp  cl_net_chan_mp.h  cl_net_chan_mp.txt  cl_parse_mp.cpp  cl_parse_mp.h  cl_parse_mp.txt  cl_pose_mp.cpp  cl_pose_mp.h  (+20 more)
tl/: gdt_remote.txt  tl_system.txt
(+1691 files in other folders)
